# loc-stats

./: Cargo.toml  README.md
scripts/: run_tests.sh
src/: get_stats.rs  langs.rs  lib.rs  main.rs  output.rs
tests/: main.rs
