[package]
name = "loc-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gitignored = "0.4.0"

[dev-dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                
    "fast-rng",          
]
